parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIFERENTE
    DIRCHAVE
    ENQUANTO
    ENTAO
    ESQCHAVE
    IGUALDADE
    LEIA
    MAIOR
    MAIORIGUAL
    MENOR
    MENORIGUAL
    SE
    VIRGULA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> programa expression
Rule 2     programa -> <empty>
Rule 3     expression -> VARIAVEL IGUAL valor FINALEXPRESSAO
Rule 4     valor -> INTEIRO
Rule 5     valor -> DECIMAL
Rule 6     valor -> FRASE
Rule 7     valor -> expression
Rule 8     expression -> expression ADICAO expression
Rule 9     expression -> expression SUBTRACAO expression
Rule 10    expression -> expression MULTIPLICACAO expression
Rule 11    expression -> expression DIVISAO expression
Rule 12    expression -> term
Rule 13    term -> INTEIRO
Rule 14    term -> DECIMAL
Rule 15    term -> FRASE
Rule 16    term -> ESQPARENTESE expression DIRPARENTESE
Rule 17    expression -> FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
Rule 18    bloco -> expression
Rule 19    bloco -> bloco expression
Rule 20    expression -> ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
Rule 21    expression -> ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO

Terminals, with rules where they appear

ADICAO               : 8
DECIMAL              : 5 14
DIFERENTE            : 
DIRCHAVE             : 
DIRPARENTESE         : 16 17 20 21
DIVISAO              : 11
ENQUANTO             : 
ENTAO                : 
ENTRE                : 17
ESCREVA              : 20 21
ESQCHAVE             : 
ESQPARENTESE         : 16 17 20 21
FAIXA                : 17
FINALEXPRESSAO       : 3 17 20 21
FOR                  : 17
FRASE                : 6 15
IGUAL                : 3
IGUALDADE            : 
INTEIRO              : 4 13 17
LEIA                 : 
MAIOR                : 
MAIORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
MULTIPLICACAO        : 10
SE                   : 
SUBTRACAO            : 9
VARIAVEL             : 3 17 21
VIRGULA              : 
error                : 

Nonterminals, with rules where they appear

bloco                : 17 19
expression           : 1 7 8 8 9 9 10 10 11 11 16 18 19 20
programa             : 1 0
term                 : 12
valor                : 3

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . programa expression
    (2) programa -> .

    VARIAVEL        reduce using rule 2 (programa -> .)
    FOR             reduce using rule 2 (programa -> .)
    ESCREVA         reduce using rule 2 (programa -> .)
    INTEIRO         reduce using rule 2 (programa -> .)
    DECIMAL         reduce using rule 2 (programa -> .)
    FRASE           reduce using rule 2 (programa -> .)
    ESQPARENTESE    reduce using rule 2 (programa -> .)
    $end            reduce using rule 2 (programa -> .)

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .
    (1) programa -> programa . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 2
    term                           shift and go to state 4

state 2

    (1) programa -> programa expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    VARIAVEL        reduce using rule 1 (programa -> programa expression .)
    FOR             reduce using rule 1 (programa -> programa expression .)
    ESCREVA         reduce using rule 1 (programa -> programa expression .)
    INTEIRO         reduce using rule 1 (programa -> programa expression .)
    DECIMAL         reduce using rule 1 (programa -> programa expression .)
    FRASE           reduce using rule 1 (programa -> programa expression .)
    ESQPARENTESE    reduce using rule 1 (programa -> programa expression .)
    $end            reduce using rule 1 (programa -> programa expression .)
    ADICAO          shift and go to state 11
    SUBTRACAO       shift and go to state 12
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14


state 3

    (3) expression -> VARIAVEL . IGUAL valor FINALEXPRESSAO

    IGUAL           shift and go to state 15


state 4

    (12) expression -> term .

    ADICAO          reduce using rule 12 (expression -> term .)
    SUBTRACAO       reduce using rule 12 (expression -> term .)
    MULTIPLICACAO   reduce using rule 12 (expression -> term .)
    DIVISAO         reduce using rule 12 (expression -> term .)
    VARIAVEL        reduce using rule 12 (expression -> term .)
    FOR             reduce using rule 12 (expression -> term .)
    ESCREVA         reduce using rule 12 (expression -> term .)
    INTEIRO         reduce using rule 12 (expression -> term .)
    DECIMAL         reduce using rule 12 (expression -> term .)
    FRASE           reduce using rule 12 (expression -> term .)
    ESQPARENTESE    reduce using rule 12 (expression -> term .)
    $end            reduce using rule 12 (expression -> term .)
    DIRPARENTESE    reduce using rule 12 (expression -> term .)
    FINALEXPRESSAO  reduce using rule 12 (expression -> term .)


state 5

    (17) expression -> FOR . VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco

    VARIAVEL        shift and go to state 16


state 6

    (16) term -> ESQPARENTESE . expression DIRPARENTESE
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 17
    term                           shift and go to state 4

state 7

    (13) term -> INTEIRO .

    ADICAO          reduce using rule 13 (term -> INTEIRO .)
    SUBTRACAO       reduce using rule 13 (term -> INTEIRO .)
    MULTIPLICACAO   reduce using rule 13 (term -> INTEIRO .)
    DIVISAO         reduce using rule 13 (term -> INTEIRO .)
    VARIAVEL        reduce using rule 13 (term -> INTEIRO .)
    FOR             reduce using rule 13 (term -> INTEIRO .)
    ESCREVA         reduce using rule 13 (term -> INTEIRO .)
    INTEIRO         reduce using rule 13 (term -> INTEIRO .)
    DECIMAL         reduce using rule 13 (term -> INTEIRO .)
    FRASE           reduce using rule 13 (term -> INTEIRO .)
    ESQPARENTESE    reduce using rule 13 (term -> INTEIRO .)
    $end            reduce using rule 13 (term -> INTEIRO .)
    DIRPARENTESE    reduce using rule 13 (term -> INTEIRO .)
    FINALEXPRESSAO  reduce using rule 13 (term -> INTEIRO .)


state 8

    (20) expression -> ESCREVA . ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> ESCREVA . ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO

    ESQPARENTESE    shift and go to state 18


state 9

    (14) term -> DECIMAL .

    ADICAO          reduce using rule 14 (term -> DECIMAL .)
    SUBTRACAO       reduce using rule 14 (term -> DECIMAL .)
    MULTIPLICACAO   reduce using rule 14 (term -> DECIMAL .)
    DIVISAO         reduce using rule 14 (term -> DECIMAL .)
    VARIAVEL        reduce using rule 14 (term -> DECIMAL .)
    FOR             reduce using rule 14 (term -> DECIMAL .)
    ESCREVA         reduce using rule 14 (term -> DECIMAL .)
    INTEIRO         reduce using rule 14 (term -> DECIMAL .)
    DECIMAL         reduce using rule 14 (term -> DECIMAL .)
    FRASE           reduce using rule 14 (term -> DECIMAL .)
    ESQPARENTESE    reduce using rule 14 (term -> DECIMAL .)
    $end            reduce using rule 14 (term -> DECIMAL .)
    DIRPARENTESE    reduce using rule 14 (term -> DECIMAL .)
    FINALEXPRESSAO  reduce using rule 14 (term -> DECIMAL .)


state 10

    (15) term -> FRASE .

    ADICAO          reduce using rule 15 (term -> FRASE .)
    SUBTRACAO       reduce using rule 15 (term -> FRASE .)
    MULTIPLICACAO   reduce using rule 15 (term -> FRASE .)
    DIVISAO         reduce using rule 15 (term -> FRASE .)
    VARIAVEL        reduce using rule 15 (term -> FRASE .)
    FOR             reduce using rule 15 (term -> FRASE .)
    ESCREVA         reduce using rule 15 (term -> FRASE .)
    INTEIRO         reduce using rule 15 (term -> FRASE .)
    DECIMAL         reduce using rule 15 (term -> FRASE .)
    FRASE           reduce using rule 15 (term -> FRASE .)
    ESQPARENTESE    reduce using rule 15 (term -> FRASE .)
    $end            reduce using rule 15 (term -> FRASE .)
    DIRPARENTESE    reduce using rule 15 (term -> FRASE .)
    FINALEXPRESSAO  reduce using rule 15 (term -> FRASE .)


state 11

    (8) expression -> expression ADICAO . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 19
    term                           shift and go to state 4

state 12

    (9) expression -> expression SUBTRACAO . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 20
    term                           shift and go to state 4

state 13

    (10) expression -> expression MULTIPLICACAO . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 21
    term                           shift and go to state 4

state 14

    (11) expression -> expression DIVISAO . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 22
    term                           shift and go to state 4

state 15

    (3) expression -> VARIAVEL IGUAL . valor FINALEXPRESSAO
    (4) valor -> . INTEIRO
    (5) valor -> . DECIMAL
    (6) valor -> . FRASE
    (7) valor -> . expression
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    INTEIRO         shift and go to state 24
    DECIMAL         shift and go to state 25
    FRASE           shift and go to state 26
    VARIAVEL        shift and go to state 3
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    ESQPARENTESE    shift and go to state 6

    valor                          shift and go to state 23
    expression                     shift and go to state 27
    term                           shift and go to state 4

state 16

    (17) expression -> FOR VARIAVEL . ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco

    ENTRE           shift and go to state 28


state 17

    (16) term -> ESQPARENTESE expression . DIRPARENTESE
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    DIRPARENTESE    shift and go to state 29
    ADICAO          shift and go to state 11
    SUBTRACAO       shift and go to state 12
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14


state 18

    (20) expression -> ESCREVA ESQPARENTESE . expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> ESCREVA ESQPARENTESE . VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (3) expression -> . VARIAVEL IGUAL valor FINALEXPRESSAO
    (8) expression -> . expression ADICAO expression
    (9) expression -> . expression SUBTRACAO expression
    (10) expression -> . expression MULTIPLICACAO expression
    (11) expression -> . expression DIVISAO expression
    (12) expression -> . term
    (17) expression -> . FOR VARIAVEL ENTRE FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco
    (20) expression -> . ESCREVA ESQPARENTESE expression DIRPARENTESE FINALEXPRESSAO
    (21) expression -> . ESCREVA ESQPARENTESE VARIAVEL DIRPARENTESE FINALEXPRESSAO
    (13) term -> . INTEIRO
    (14) term -> . DECIMAL
    (15) term -> . FRASE
    (16) term -> . ESQPARENTESE expression DIRPARENTESE

    VARIAVEL        shift and go to state 31
    FOR             shift and go to state 5
    ESCREVA         shift and go to state 8
    INTEIRO         shift and go to state 7
    DECIMAL         shift and go to state 9
    FRASE           shift and go to state 10
    ESQPARENTESE    shift and go to state 6

    expression                     shift and go to state 30
    term                           shift and go to state 4

state 19

    (8) expression -> expression ADICAO expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    ADICAO          reduce using rule 8 (expression -> expression ADICAO expression .)
    SUBTRACAO       reduce using rule 8 (expression -> expression ADICAO expression .)
    VARIAVEL        reduce using rule 8 (expression -> expression ADICAO expression .)
    FOR             reduce using rule 8 (expression -> expression ADICAO expression .)
    ESCREVA         reduce using rule 8 (expression -> expression ADICAO expression .)
    INTEIRO         reduce using rule 8 (expression -> expression ADICAO expression .)
    DECIMAL         reduce using rule 8 (expression -> expression ADICAO expression .)
    FRASE           reduce using rule 8 (expression -> expression ADICAO expression .)
    ESQPARENTESE    reduce using rule 8 (expression -> expression ADICAO expression .)
    $end            reduce using rule 8 (expression -> expression ADICAO expression .)
    DIRPARENTESE    reduce using rule 8 (expression -> expression ADICAO expression .)
    FINALEXPRESSAO  reduce using rule 8 (expression -> expression ADICAO expression .)
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14

  ! MULTIPLICACAO   [ reduce using rule 8 (expression -> expression ADICAO expression .) ]
  ! DIVISAO         [ reduce using rule 8 (expression -> expression ADICAO expression .) ]
  ! ADICAO          [ shift and go to state 11 ]
  ! SUBTRACAO       [ shift and go to state 12 ]


state 20

    (9) expression -> expression SUBTRACAO expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    ADICAO          reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    SUBTRACAO       reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    VARIAVEL        reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    FOR             reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    ESCREVA         reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    INTEIRO         reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    DECIMAL         reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    FRASE           reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    ESQPARENTESE    reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    $end            reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    DIRPARENTESE    reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    FINALEXPRESSAO  reduce using rule 9 (expression -> expression SUBTRACAO expression .)
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14

  ! MULTIPLICACAO   [ reduce using rule 9 (expression -> expression SUBTRACAO expression .) ]
  ! DIVISAO         [ reduce using rule 9 (expression -> expression SUBTRACAO expression .) ]
  ! ADICAO          [ shift and go to state 11 ]
  ! SUBTRACAO       [ shift and go to state 12 ]


state 21

    (10) expression -> expression MULTIPLICACAO expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    ADICAO          reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    SUBTRACAO       reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    MULTIPLICACAO   reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    DIVISAO         reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    VARIAVEL        reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    FOR             reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    ESCREVA         reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    INTEIRO         reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    DECIMAL         reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    FRASE           reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    ESQPARENTESE    reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    $end            reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    DIRPARENTESE    reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)
    FINALEXPRESSAO  reduce using rule 10 (expression -> expression MULTIPLICACAO expression .)

  ! ADICAO          [ shift and go to state 11 ]
  ! SUBTRACAO       [ shift and go to state 12 ]
  ! MULTIPLICACAO   [ shift and go to state 13 ]
  ! DIVISAO         [ shift and go to state 14 ]


state 22

    (11) expression -> expression DIVISAO expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    ADICAO          reduce using rule 11 (expression -> expression DIVISAO expression .)
    SUBTRACAO       reduce using rule 11 (expression -> expression DIVISAO expression .)
    MULTIPLICACAO   reduce using rule 11 (expression -> expression DIVISAO expression .)
    DIVISAO         reduce using rule 11 (expression -> expression DIVISAO expression .)
    VARIAVEL        reduce using rule 11 (expression -> expression DIVISAO expression .)
    FOR             reduce using rule 11 (expression -> expression DIVISAO expression .)
    ESCREVA         reduce using rule 11 (expression -> expression DIVISAO expression .)
    INTEIRO         reduce using rule 11 (expression -> expression DIVISAO expression .)
    DECIMAL         reduce using rule 11 (expression -> expression DIVISAO expression .)
    FRASE           reduce using rule 11 (expression -> expression DIVISAO expression .)
    ESQPARENTESE    reduce using rule 11 (expression -> expression DIVISAO expression .)
    $end            reduce using rule 11 (expression -> expression DIVISAO expression .)
    DIRPARENTESE    reduce using rule 11 (expression -> expression DIVISAO expression .)
    FINALEXPRESSAO  reduce using rule 11 (expression -> expression DIVISAO expression .)

  ! ADICAO          [ shift and go to state 11 ]
  ! SUBTRACAO       [ shift and go to state 12 ]
  ! MULTIPLICACAO   [ shift and go to state 13 ]
  ! DIVISAO         [ shift and go to state 14 ]


state 23

    (3) expression -> VARIAVEL IGUAL valor . FINALEXPRESSAO

    FINALEXPRESSAO  shift and go to state 32


state 24

    (4) valor -> INTEIRO .
    (13) term -> INTEIRO .

  ! reduce/reduce conflict for FINALEXPRESSAO resolved using rule 4 (valor -> INTEIRO .)
    FINALEXPRESSAO  reduce using rule 4 (valor -> INTEIRO .)
    ADICAO          reduce using rule 13 (term -> INTEIRO .)
    SUBTRACAO       reduce using rule 13 (term -> INTEIRO .)
    MULTIPLICACAO   reduce using rule 13 (term -> INTEIRO .)
    DIVISAO         reduce using rule 13 (term -> INTEIRO .)

  ! FINALEXPRESSAO  [ reduce using rule 13 (term -> INTEIRO .) ]


state 25

    (5) valor -> DECIMAL .
    (14) term -> DECIMAL .

  ! reduce/reduce conflict for FINALEXPRESSAO resolved using rule 5 (valor -> DECIMAL .)
    FINALEXPRESSAO  reduce using rule 5 (valor -> DECIMAL .)
    ADICAO          reduce using rule 14 (term -> DECIMAL .)
    SUBTRACAO       reduce using rule 14 (term -> DECIMAL .)
    MULTIPLICACAO   reduce using rule 14 (term -> DECIMAL .)
    DIVISAO         reduce using rule 14 (term -> DECIMAL .)

  ! FINALEXPRESSAO  [ reduce using rule 14 (term -> DECIMAL .) ]


state 26

    (6) valor -> FRASE .
    (15) term -> FRASE .

  ! reduce/reduce conflict for FINALEXPRESSAO resolved using rule 6 (valor -> FRASE .)
    FINALEXPRESSAO  reduce using rule 6 (valor -> FRASE .)
    ADICAO          reduce using rule 15 (term -> FRASE .)
    SUBTRACAO       reduce using rule 15 (term -> FRASE .)
    MULTIPLICACAO   reduce using rule 15 (term -> FRASE .)
    DIVISAO         reduce using rule 15 (term -> FRASE .)

  ! FINALEXPRESSAO  [ reduce using rule 15 (term -> FRASE .) ]


state 27

    (7) valor -> expression .
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    FINALEXPRESSAO  reduce using rule 7 (valor -> expression .)
    ADICAO          shift and go to state 11
    SUBTRACAO       shift and go to state 12
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14


state 28

    (17) expression -> FOR VARIAVEL ENTRE . FAIXA ESQPARENTESE INTEIRO DIRPARENTESE FINALEXPRESSAO bloco

    FAIXA           shift and go to state 33


state 29

    (16) term -> ESQPARENTESE expression DIRPARENTESE .

    ADICAO          reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    SUBTRACAO       reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    MULTIPLICACAO   reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    DIVISAO         reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    VARIAVEL        reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    FOR             reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    ESCREVA         reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    INTEIRO         reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    DECIMAL         reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    FRASE           reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    ESQPARENTESE    reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    $end            reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    DIRPARENTESE    reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)
    FINALEXPRESSAO  reduce using rule 16 (term -> ESQPARENTESE expression DIRPARENTESE .)


state 30

    (20) expression -> ESCREVA ESQPARENTESE expression . DIRPARENTESE FINALEXPRESSAO
    (8) expression -> expression . ADICAO expression
    (9) expression -> expression . SUBTRACAO expression
    (10) expression -> expression . MULTIPLICACAO expression
    (11) expression -> expression . DIVISAO expression

    DIRPARENTESE    shift and go to state 34
    ADICAO          shift and go to state 11
    SUBTRACAO       shift and go to state 12
    MULTIPLICACAO   shift and go to state 13
    DIVISAO         shift and go to state 14


state 31

    (21) expression -> ESCREVA ESQPARENTESE VARIAVEL . DIRPARENTESE FINALEXPRESSAO
    (3) expression -> VARIAVEL . IGUAL valor FINALEXPRESSAO

    DIRPARENTESE    shift and go to state 35
    IGUAL           shift and go to state 15


state 32

    (3) expression -> VARIAVEL IGUAL valor FINALEXPRESSAO .
